# frontend

./: .clippy.toml  .dockerignore  .editorconfig  .env  .eslintrc.json  .gitignore  .gitlab-ci.yml  .graphqlconfig.yml  .modernizrrc  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GLOSSARY.md  Makefile  README.md  api-mock-server.js  cypress.json  docker-compose.yml  graphql.mock.schema.json  nodemon.json  nsconfig.json  package.json  server.js  tsconfig.json  tsconfig.tns.json  webpack.config.js
_build/artifacts/: .gitignore
_dev/: minikube.vals.yaml  review.vals.yaml  staging.vals.yaml
_dev/conf/: backend.toml
_dev/medea/: config.toml
_helm/frontend/: Chart.yaml  values.yaml
_helm/medea/: Chart.yaml  values.yaml
assets/i18n/: ru.json
media-server-mock/: Participant.js  Room.js  chats.js  media-server-mock.js  socket_messages.js  users_data.js
src/: Router.ts  commonWebVue.ts  package.json
src/api/: Im.ts  PartnerLink.ts  Photo.ts  User.ts
src/class-component/: hooks.ts
src/entry/: client.ts  native.ts  server.ts
src/filters/: format-size.ts  index.ts  raw.ts  truncate.ts
src/filters-async/: emoji.ts
src/localdata/: chats.ts  contacts.ts  user.ts  users.ts
src/mixins/: auto-resize.ts  counter.ts  debouncedSearch.ts  filters.ts  profileFieldProgressIndicator.ts  router-actions.ts  sideMenu.ts  swipe-menu.ts  web-camera.ts
src/models/: Attachment.ts  Call.ts  CallManagerTypes.ts  CallParticipant.ts  Chat.ts  Contact.ts  ContactCard.ts  CurrentUser.ts  (+16 more)
webpack/: base.config.js  client.config.js  docs.config.js  server.config.js
(+737 files in other folders)
